@@ -1,0 +1,110 @@
+#!@@PERL@@ -w
+#
+# Plugin to monitor usage of bind 9 servers using rndc stats
+#
+# Contributed by Laurent Facq 15/06/2004
+# Based on Nicolai Langfeldt bind9 plugin
+#
+# install :
+#  put :
+#      statistics-file "/var/run/named.stats"; // in the options part of your named.conf
+# then create the STATEFILE :
+#      touch /opt/lrrd/tmp/bind9_rndc.state ; chmod a+w /opt/lrrd/tmp/bind9_rndc.state
+#
+# 
+#
+#%# family=contrib
+
+use strict;
+
+#my $RNDC = '/usr/bin/sudo /usr/sbin/rndc'; # comment out if you already 'rndc stats' by crontab
+my $RNDC = '/usr/sbin/rndc'; # comment out if you already 'rndc stats' by crontab
+
+my $QUERYSTATS='/var/run/named.stats';
+my $STATEFILE='@@PLUGSTATE@@/bind9_rndc.state'; ## really used only for the config, you have to create this file
+my $OTHER=0;
+my %IN;
+
+sub get_state {
+    open(Q,"< $STATEFILE") or die;
+    while (<Q>) {
+        chomp;
+        my ($q,$n) = split(/\s+/,$_,2);
+        $IN{$q}=$n unless defined($IN{$q});
+    }
+    close(Q);
+}
+
+
+sub do_stats {
+    my ($k,$l); 
+
+    if ($RNDC) { system("$RNDC stats"); }
+    
+    open(Q,"< $QUERYSTATS") or die;
+    seek(Q, 400, -1); # go nearly to the en of the file to avoir reading it all (if not often cleaned)
+    while ($l=<Q>) {
+	chomp($l);
+	
+#+++ Statistics Dump +++ (1087277501)
+#success 106183673
+#referral 2103636
+#nxrrset 43534220
+#nxdomain 47050478
+#recursion 37303997
+#failure 17522313
+#--- Statistics Dump --- (1087277501)
+	
+	#print STDERR $l."\n";
+	if ($l =~ m/\+\+\+ Statistics Dump \+\+\+/)
+	{ # reset 
+	    undef %IN;
+	}
+	else
+	{
+	    my ($what, $nb)= split ('\s+',$l);
+	    if ($what && ($what ne '---'))
+	    {
+		$IN{$what}= $nb;
+		#print STDERR "$what - $nb\n";
+	    }
+	}
+    }
+    close(Q);
+    
+    get_state;
+    
+    open(Q,"> $STATEFILE") or die;
+    foreach $k (keys %IN) {
+	print "query_$k.value ",$IN{$k},"\n";
+	print Q "$k ",$IN{$k},"\n";
+    }
+    close(Q);
+}
+
+
+sub do_config {
+    my $k;
+
+    print "graph_title DNS Queries by status
+graph_vlabel Queries / minute
+";
+    
+    get_state;
+    
+    foreach $k (keys %IN) {
+	print "query_$k.label $k
+query_$k.type DERIVE
+query_$k.min 0
+query_$k.cdef query_$k,60,*
+";
+    }
+};
+
+if (defined($ARGV[0]) and ($ARGV[0] eq 'config')) {
+    do_config;
+    exit(0);
+}
+
+
+do_stats;
